--- a/src/styles/Section/properties/PropertyItem.module.css
+++ b/src/styles/Section/properties/PropertyItem.module.css
@@ -176,7 +176,7 @@
 }
 
 .cardTitle {
-  font-size: var(--font-size-lg);
+  font-size: var(--font-size-md);
   font-weight: bold;
   color: var(--color-black);
   text-transform: capitalize;
@@ -197,7 +197,7 @@
   font-size: var(--font-size-sm);
   color: var(--color-gray-500);
   margin: 0;
-  padding: 0;
+  padding: 0.3rem 0 !important;
 }
 
 .priceContainer {
